# serial

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
cmake/: config.cmake.in
examples/: CMakeLists.txt
examples/find/: CMakeLists.txt  find.cpp
examples/write/: CMakeLists.txt  write.cpp  write.ino
include/wrt/serial/: serial.hpp
src/: CMakeLists.txt  serial.cpp
